@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="cgame"
 	ProjectGUID="{68A804FC-00C3-44E2-A479-3DB3D20F943D}"
 	RootNamespace="cgame"
@@ -111,6 +111,7 @@
 				Name="VCPostBuildEventTool"
 				Description="Copy to ET"
 				CommandLine="copy &quot;$(TargetPath)&quot; &quot;$(ETDIR)\etpub\&quot;"
+				ExcludedFromBuild="true"
 			/>
 		</Configuration>
 		<Configuration
@@ -298,6 +299,10 @@
 			</File>
 			<File
 				RelativePath=".\cg_consolecmds.c"
+				>
+			</File>
+			<File
+				RelativePath=".\cg_crash.c"
 				>
 			</File>
 			<File
