@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="ui"
 	ProjectGUID="{4C02EEB1-33AA-41C5-9A96-609161DF1635}"
 	RootNamespace="ui"
@@ -111,6 +111,7 @@
 				Name="VCPostBuildEventTool"
 				Description="Copy to ET"
 				CommandLine="copy &quot;$(TargetPath)&quot; &quot;$(ETDIR)\etpub\&quot;"
+				ExcludedFromBuild="true"
 			/>
 		</Configuration>
 		<Configuration
