@@ -1983,6 +1983,12 @@
            g_chargeType
 * flms:    added g_flushItems (NQ)
 * flms:    mg's can make headshots
-* flms:    you also hear hitsounds when Friendly Fire is off and g_reflectFriendlyFire is on
+* flms:    you also hear hitsounds when Friendly Fire is off and 
+           g_reflectFriendlyFire is on
 * flms:    mg's can reload midclip* quad:    Lua API for ETPub, aiming for compatibility with ETPro 
            http://wolfwiki.anime.net/index.php/Lua_Mod_API (TODO: Docs!)
+* stephan: added an oversized userinfo check to g_spoofOptions flag 256 and
+           added the \n char to the list of characters that may not be used in
+           a userinfo string. A user with any of the forbidden chars in his/her
+           userinfo will be dropped from the server from now on
+
